fix padding on sides of slider
Extra padding on the sides of a range slider extends the length of the slider, such that you can't move the thumb all the way to the end.

--- a/client/homebrew/brewRenderer/toolBar/toolBar.less
+++ b/client/homebrew/brewRenderer/toolBar/toolBar.less
@@ -27,6 +27,7 @@
 		&.slider {
 			color: #D3D3D3;
 			accent-color: #d3d3d3;
+			padding: 2px 0;
   
 			&::-webkit-slider-thumb, &::-moz-slider-thumb {
 				cursor           : pointer; 
@@ -71,7 +72,7 @@
 			font-weight      : unset;
 			color            : inherit;
 			background-color : unset;
-			
+
 			&:focus { outline : 1px solid #d3d3d3; }
 
 			&:disabled {
